--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </a>
 
           <!-- Instagram Logo -->
-          <a href="#" class="footer-link icon-link">
+          <a href="https://www.instagram.com/_.f.i.y.i.n/" class="footer-link icon-link">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </nav>
