--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
           <!-- Instagram Logo -->
           <a href="https://www.instagram.com/_.f.i.y.i.n/" class="footer-link icon-link">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram"> <span>k?</span></i>
           </a>
         </nav>
       </div>
