--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   </head>
   <body>
     <!-- Top Navigation styling  -->
-    <nav class="top-nav">
+    <section class="top-nav">
       <img
         src="images/logo.svg"
         class="website-logo nav-logo"
         alt="The logo of the website"
       />
       <button class="nav-button">Try It Free</button>
-    </nav>
+    </section>
 
     <!-- Header -->
     <header class="header section">
